develop: рефакторинг